# global-health-bim-dashboard

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_OVERVIEW.md  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  package.json  requirements.txt  test-mcp-access.md  tsconfig.json
cesium-terrain-server/: .dockerignore  README.md
cesium-terrain-server/docker/: Dockerfile
config/cesium/: docker-entrypoint.sh  nginx.conf
data/terrain/: README.md
data/terrain-ghm/: README.md
docker/cesium-terrain-server/: Dockerfile
docs/: API.md  ARCHITECTURE.md  BIM_INTEGRATION.md  DATA_SOURCES.md  DOCKER_SETUP.md  MOBILE_SCROLL_TO_DONATE.md  QUICKSTART.md  README.md  UNREAL_CROSS_PLATFORM.md  VISUALIZATION.md  azure-maps-notes.md  cesium-sandcastle-knowledge-base.md  terrain-setup.md  unreal-engine-integration.md
scripts/: init-ollama.sh
src/cesium/: README.md  cesium-assets-config.js  index.html  unreal-integration.js
src/services/api/: Dockerfile.dev  package.json
src/services/api/src/: index.js
src/web/: .env.example  .gitignore  index.html  package.json  vite.config.ts
src/web/src/: App.css  App.tsx  index.css
src/web/src/components/: CesiumGlobe.css  CesiumGlobe.tsx  HealthMetricsPanel.css  HealthMetricsPanel.tsx  LayerControls.css  LayerControls.tsx
src/web/src/pages/: Dashboard.css  Dashboard.tsx
src/workers/: package.json
unreal-pixel-streaming/: Dockerfile  entrypoint.sh  signaling-config.json
