[workspace]
members = ["src/core"]

[workspace.package]
version = "0.1.0"
authors = ["Jordan Paul Ehrig"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Geometry and spatial
nalgebra = "0.32"
ncollide3d = "0.33"
parry3d = "0.13"
cgal = "0.6"

# GPU compute
wgpu = "0.19"
pollster = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
neo4rs = "0.7"

# Networking
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Performance
rayon = "1.8"
dashmap = "5.5"
moka = { version = "0.12", features = ["future"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true